--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "lodash": "^4.17.21",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.2.4",
     "prettier": "^3.1.1",
-    "stylelint": "^16.23.1",
-    "stylelint-config-standard": "^39.0.0",
     "tailwindcss": "3.4.17",
     "typescript": "~5.8.0",
     "unplugin-auto-import": "^20.0.0",
